<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timeline_balance_navigation_graph"
    app:startDestination="@id/timelineBalanceFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/timelineBalanceFragment"
        android:name="com.mctech.stocktradetracking.feature.timeline_balance.view.TimelineBalanceFragment"
        android:label="@string/title_timeline_balance"
        tools:layout="@layout/fragment_timeline_balance">
        <action
            android:id="@+id/action_timelineBalanceFragment_to_timelineBalanceAddPeriodFragment"
            app:destination="@id/timelineBalanceAddPeriodFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_timelineBalanceFragment_to_timelineBalanceEditPeriodFragment"
            app:destination="@id/timelineBalanceEditPeriodFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/timelineBalanceAddPeriodFragment"
        android:name="com.mctech.stocktradetracking.feature.timeline_balance.view.TimelineBalanceAddPeriodFragment"
        android:label="@string/add_timeline"
        tools:layout="@layout/fragment_timeline_add_period" />

    <fragment
        android:id="@+id/timelineBalanceEditPeriodFragment"
        android:name="com.mctech.stocktradetracking.feature.timeline_balance.view.TimelineBalanceEditPeriodFragment"
        android:label="@string/edit_period"
        tools:layout="@layout/fragment_timeline_edit_period" />
</navigation>